--- a/SailScores.Web/Views/Competitor/Edit.cshtml
+++ b/SailScores.Web/Views/Competitor/Edit.cshtml
@@ -104,9 +104,7 @@
 <hr />
 <div class="row">
     <div class="col-12 col-xl-8">
-        <h4>History
-            <em class="fs-6">Experimental Feature</em>
-        </h4>
+        <h4>History</h4>
         <form asp-action="SaveNote" method="post">
             <input type="hidden" asp-for="Id" />
             <div class="mb-3">
