--- a/SailScores.Web/scss/custom.scss
+++ b/SailScores.Web/scss/custom.scss
@@ -1,4 +1,3 @@
-
 @import "../node_modules/bootstrap/scss/functions";
 
 $color-mode-type: media-query;
@@ -567,4 +566,11 @@ form label.required:not(.custom-control-label)::after {
     .select2-container--default .select2-dropdown .select2-results__options .select2-results__option[role=group] .select2-results__group {
         color: var(--bs-secondary-color) !important;
     }
+}
+
+@media (max-width: 767.98px) {
+  .form-control {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+  }
 }
