Tweaks to time tracked races

--- a/SailScores.Web/Views/Race/_scoreEntryPartial.cshtml
+++ b/SailScores.Web/Views/Race/_scoreEntryPartial.cshtml
@@ -27,11 +27,11 @@
                        placeholder="place" />
             </div>
             <div class="d-flex flex-row gap-1">
-                <div class="finish-time-div">
+                <div class="finish-time-div" display="none">
                     <input name="FinishTime" class="form-control form-control-sm finish-time-input" type="time" step="1" />
                     <span class="text-danger finish-time-error"></span>
                 </div>
-                <div class="elapsed-time-div">
+                <div class="elapsed-time-div" display="none">
                     <input name="ElapsedTime"
                            class="form-control form-control-sm elapsed-time-input"
                            type="text"
