--- a/SailScores.Web/Views/_ViewImports.cshtml
+++ b/SailScores.Web/Views/_ViewImports.cshtml
@@ -3,9 +3,9 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.Extensions.Localization
 @using SailScores.Identity.Entities
-@using SailScores.Web.Resources;
-@using SailScores.Web.Services;
-@using SailScores.Web.Models.SailScores;
+@using SailScores.Web.Resources
+@using SailScores.Web.Services
+@using SailScores.Web.Models.SailScores
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, SailScores.Web
