--- a/SailScores.Web/scss/custom.scss
+++ b/SailScores.Web/scss/custom.scss
@@ -597,6 +597,8 @@ form label.required:not(.custom-control-label)::after {
     border-radius: 0;
     border-left: 0;
     border-right: 0;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
 }
 
 .system-alert .container-lg {
