Low Point Average no DNCs

--- a/SailScores.Web/Views/ScoreCode/Delete.cshtml
+++ b/SailScores.Web/Views/ScoreCode/Delete.cshtml
@@ -6,6 +6,10 @@
 }
 
 <h3>Are you sure you want to delete this score code?</h3>
+<p>This will delete the score code in this scoring system only. If the code is defined
+    in a base scoring system, that definition will be used. If the code is not defined,
+    it will be treated as a DNC.
+</p>
 <div>
     <h4>@Model.Name</h4>
     <hr />
