--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -62,7 +62,7 @@
     <br />
     <h3>Feedback</h3>
     <p>
-        <em>Please send feedback!</em> Use the email addresses below, reach out on Twitter @@SailScores or via Github.
+        <em>Please send feedback!</em> Use the email addresses below.
     </p>
 
     <br />
