Getting Started work

--- a/SailScores.Web/Pages/Help/Index.cshtml
+++ b/SailScores.Web/Pages/Help/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+@page
 @model SailScores.Web.Pages.Help.IndexModel
 @{
     Layout = "/Pages/Help/_HelpLayout.cshtml";
@@ -8,7 +8,7 @@
 <h1>@ViewData["Title"]</h1>
 <p>Welcome to the SailScores help center.</p>
 <p>
-    Our goal is to keep SailScores intuitive and easy to use without needing documentation.
+    SailScores should be intuitive and easy to use without documentation.
     But if you're curious, troubleshooting, or just want to dig deeper, these pages are here
     to support you.
 </p>
